<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="service_label">Xscreensaver</string>
    <string name="description">A live wallpaper</string>

    <string name="app_name">Xscreensaver</string>
    <string name="author">jwz and helpers</string>
    <string name="t">True</string>
    <string name="f">False</string>
    <string name="sproingies_name">Sproingies</string>
    <string name="sproingies_settings">Settings</string>
    <string name="sproingies_description">Sproingies</string>
    <string name="sproingies_count_settings_title">Set count</string>
    <string name="sproingies_count_settings_summary">Choose count</string>
    <string name="sproingies_count_low">1</string>
    <string name="sproingies_count_high">30</string>
    <string name="sproingies_count_default">8</string>
    <string name="sproingies_wireframe_settings_title">Set wireframe</string>
    <string name="sproingies_wireframe_settings_summary">Choose wireframe</string>
    <string name="sproingies_wireframe_default">False</string>
    <string name="superquadrics_name">Superquadrics</string>
    <string name="superquadrics_settings">Settings</string>
    <string name="superquadrics_description">Superquadrics</string>
    <string name="superquadrics_spinspeed_settings_title">Set spinspeed</string>
    <string name="superquadrics_spinspeed_settings_summary">Choose spinspeed</string>
    <string name="superquadrics_spinspeed_low">0.1</string>
    <string name="superquadrics_spinspeed_high">15.0</string>
    <string name="superquadrics_spinspeed_default">5.0</string>
    <string name="stonerview_name">Stonerview</string>
    <string name="stonerview_settings">Settings</string>
    <string name="stonerview_description">Stonerview</string>
    <string name="stonerview_transparent_settings_title">Set transparent</string>
    <string name="stonerview_transparent_settings_summary">Choose transparent</string>
    <string name="stonerview_transparent_default">False</string>
    <string name="unknownpleasures_name">Unknownpleasures</string>
    <string name="unknownpleasures_settings">Settings</string>
    <string name="unknownpleasures_description">Unknownpleasures</string>
    <string name="unknownpleasures_speed_settings_title">Set speed</string>
    <string name="unknownpleasures_speed_settings_summary">Choose speed</string>
    <string name="unknownpleasures_speed_low">0.1</string>
    <string name="unknownpleasures_speed_high">3.0</string>
    <string name="unknownpleasures_speed_default">3.0</string>
    <string name="unknownpleasures_wireframe_settings_title">Set wireframe</string>
    <string name="unknownpleasures_wireframe_settings_summary">Choose wireframe</string>
    <string name="unknownpleasures_wireframe_default">True</string>
    <string name="bouncingcow_name">Bouncingcow</string>
    <string name="bouncingcow_settings">Settings</string>
    <string name="bouncingcow_description">Bouncingcow</string>
    <string name="bouncingcow_count_settings_title">Set count</string>
    <string name="bouncingcow_count_settings_summary">Choose count</string>
    <string name="bouncingcow_count_low">1</string>
    <string name="bouncingcow_count_high">9</string>
    <string name="bouncingcow_count_default">3</string>
    <string name="bouncingcow_speed_settings_title">Set speed</string>
    <string name="bouncingcow_speed_settings_summary">Choose speed</string>
    <string name="bouncingcow_speed_low">0.05</string>
    <string name="bouncingcow_speed_high">2.0</string>
    <string name="bouncingcow_speed_default">0.1</string>
    <string name="hypertorus_name">Hypertorus</string>
    <string name="hypertorus_settings">Settings</string>
    <string name="hypertorus_description">Hypertorus</string>
    <string name="hypertorus_speedwz_settings_title">Set speedwz</string>
    <string name="hypertorus_speedwz_settings_summary">Choose speedwz</string>
    <string name="hypertorus_speedwz_low">-4.0</string>
    <string name="hypertorus_speedwz_high">4.0</string>
    <string name="hypertorus_speedwz_default">1.5</string>
    <string name="hypertorus_displayMode_settings_title">Set displayMode</string>
    <string name="hypertorus_displayMode_settings_summary">Choose displayMode</string>
    <string name="hypertorus_displayMode_default">transparent</string>
    <string name="hypertorus_projection4d_settings_title">Set projection4d</string>
    <string name="hypertorus_projection4d_settings_summary">Choose projection4d</string>
    <string name="hypertorus_projection4d_default">orthographic</string>
    <string name="hypertorus_speedwy_settings_title">Set speedwy</string>
    <string name="hypertorus_speedwy_settings_summary">Choose speedwy</string>
    <string name="hypertorus_speedwy_low">-4.0</string>
    <string name="hypertorus_speedwy_high">4.0</string>
    <string name="hypertorus_speedwy_default">1.3</string>
    <string name="hypertorus_appearance_settings_title">Set appearance</string>
    <string name="hypertorus_appearance_settings_summary">Choose appearance</string>
    <string name="hypertorus_appearance_default">spirals-16</string>
    <string name="hypertorus_colors_settings_title">Set colors</string>
    <string name="hypertorus_colors_settings_summary">Choose colors</string>
    <string name="hypertorus_colors_default">twosided</string>
    <string name="hypertorus_speedxz_settings_title">Set speedxz</string>
    <string name="hypertorus_speedxz_settings_summary">Choose speedxz</string>
    <string name="hypertorus_speedxz_low">-4.0</string>
    <string name="hypertorus_speedxz_high">4.0</string>
    <string name="hypertorus_speedxz_default">1.9</string>
    <string name="hypertorus_speedxy_settings_title">Set speedxy</string>
    <string name="hypertorus_speedxy_settings_summary">Choose speedxy</string>
    <string name="hypertorus_speedxy_low">-4.0</string>
    <string name="hypertorus_speedxy_high">4.0</string>
    <string name="hypertorus_speedxy_default">1.7</string>
    <string name="hypertorus_projection3d_settings_title">Set projection3d</string>
    <string name="hypertorus_projection3d_settings_summary">Choose projection3d</string>
    <string name="hypertorus_projection3d_default">orthographic</string>
    <string name="hypertorus_speedyz_settings_title">Set speedyz</string>
    <string name="hypertorus_speedyz_settings_summary">Choose speedyz</string>
    <string name="hypertorus_speedyz_low">-4.0</string>
    <string name="hypertorus_speedyz_high">4.0</string>
    <string name="hypertorus_speedyz_default">2.1</string>
    <string name="hypertorus_speedwx_settings_title">Set speedwx</string>
    <string name="hypertorus_speedwx_settings_summary">Choose speedwx</string>
    <string name="hypertorus_speedwx_low">-4.0</string>
    <string name="hypertorus_speedwx_high">4.0</string>
    <string name="hypertorus_speedwx_default">1.1</string>
    <string name="glhanoi_name">Glhanoi</string>
    <string name="glhanoi_settings">Settings</string>
    <string name="glhanoi_description">Glhanoi</string>
    <string name="glhanoi_fog_settings_title">Set fog</string>
    <string name="glhanoi_fog_settings_summary">Choose fog</string>
    <string name="glhanoi_fog_default">True</string>
    <string name="glhanoi_trails_settings_title">Set trails</string>
    <string name="glhanoi_trails_settings_summary">Choose trails</string>
    <string name="glhanoi_trails_low">0</string>
    <string name="glhanoi_trails_high">10</string>
    <string name="glhanoi_trails_default">2</string>
    <string name="glhanoi_light_settings_title">Set light</string>
    <string name="glhanoi_light_settings_summary">Choose light</string>
    <string name="glhanoi_light_default">False</string>
    <string name="glhanoi_poles_settings_title">Set poles</string>
    <string name="glhanoi_poles_settings_summary">Choose poles</string>
    <string name="glhanoi_poles_low">3</string>
    <string name="glhanoi_poles_high">31</string>
    <string name="glhanoi_poles_default">0</string>
    <string name="glhanoi_speed_settings_title">Set speed</string>
    <string name="glhanoi_speed_settings_summary">Choose speed</string>
    <string name="glhanoi_speed_low">1</string>
    <string name="glhanoi_speed_high">20</string>
    <string name="glhanoi_speed_default">1</string>
</resources>
