<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/glhanoi_settings"
        android:key="glhanoiwallpaper_settings">
    <ListPreference
            android:key="glhanoi_fog"
            android:title="@string/glhanoi_fog_settings_title"
            android:summary="@string/glhanoi_fog_settings_summary"
            android:entries="@array/glhanoi_fog_names"
            android:defaultValue="@string/glhanoi_fog_default"
            android:entryValues="@array/glhanoi_fog_prefix" />
    <org.jwz.xscreensaver.SliderPreference
        android:defaultValue="@string/glhanoi_trails_float"
        android:dialogMessage="@string/glhanoi_trails_settings_summary"
        android:key="glhanoi_trails"
        android:summary="@array/glhanoi_trails_prefix"
        android:title="@string/glhanoi_trails_settings_title" />
    <ListPreference
            android:key="glhanoi_light"
            android:title="@string/glhanoi_light_settings_title"
            android:summary="@string/glhanoi_light_settings_summary"
            android:entries="@array/glhanoi_light_names"
            android:defaultValue="@string/glhanoi_light_default"
            android:entryValues="@array/glhanoi_light_prefix" />
    <org.jwz.xscreensaver.SliderPreference
        android:defaultValue="@string/glhanoi_poles_float"
        android:dialogMessage="@string/glhanoi_poles_settings_summary"
        android:key="glhanoi_poles"
        android:summary="@array/glhanoi_poles_prefix"
        android:title="@string/glhanoi_poles_settings_title" />
    <org.jwz.xscreensaver.SliderPreference
        android:defaultValue="@string/glhanoi_speed_float"
        android:dialogMessage="@string/glhanoi_speed_settings_summary"
        android:key="glhanoi_speed"
        android:summary="@array/glhanoi_speed_prefix"
        android:title="@string/glhanoi_speed_settings_title" />
    </PreferenceCategory>
</PreferenceScreen>
