<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/sproingies_settings"
        android:key="sproingieswallpaper_settings">
    <org.jwz.xscreensaver.SliderPreference
        android:defaultValue="@string/sproingies_count_float"
        android:dialogMessage="@string/sproingies_count_settings_summary"
        android:key="sproingies_count"
        android:summary="@array/sproingies_count_prefix"
        android:title="@string/sproingies_count_settings_title" />
    <ListPreference
            android:key="sproingies_wireframe"
            android:title="@string/sproingies_wireframe_settings_title"
            android:summary="@string/sproingies_wireframe_settings_summary"
            android:entries="@array/sproingies_wireframe_names"
            android:defaultValue="@string/sproingies_wireframe_default"
            android:entryValues="@array/sproingies_wireframe_prefix" />
    </PreferenceCategory>
</PreferenceScreen>
