<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/unknownpleasures_settings"
        android:key="unknownpleasureswallpaper_settings">
    <org.jwz.xscreensaver.SliderPreference
        android:defaultValue="@string/unknownpleasures_speed_float"
        android:dialogMessage="@string/unknownpleasures_speed_settings_summary"
        android:key="unknownpleasures_speed"
        android:summary="@array/unknownpleasures_speed_prefix"
        android:title="@string/unknownpleasures_speed_settings_title" />
    <ListPreference
            android:key="unknownpleasures_wireframe"
            android:title="@string/unknownpleasures_wireframe_settings_title"
            android:summary="@string/unknownpleasures_wireframe_settings_summary"
            android:entries="@array/unknownpleasures_wireframe_names"
            android:defaultValue="@string/unknownpleasures_wireframe_default"
            android:entryValues="@array/unknownpleasures_wireframe_prefix" />
    </PreferenceCategory>
</PreferenceScreen>
